[package]
name = "code-reviewer"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
candle-core = { version = "0.8", features = ["quantized"] }
candle-nn = "0.8"
candle-transformers = { version = "0.8", features = ["quantized"] }
tokenizers = "0.21"
dirs = "6"
